# challenges

./: .gitattributes  .gitignore  .gitmodules  .treefmt.toml  AGENTS.md  CLAUDE.md  README.md  assembly-crash-course-coverage-report.md  build  build.py  challenge  default-dockerfile.j2  flag-diff-review.md  flake.nix  maintainers.yml  pwnshop  render.py  solve.sh
.github/: labeler.yml
.github/pwnshop-ci-baselines/: v8-exploitation
.github/workflows/: apply-labels.yml  build-legacy.yml  check-encryption.yml  check-maintainers.yml  code-quality.yml  debug-cimg-screenshot-sc-libc-base.yml  explore-publish-blobs.yml  legacy-intro-heartbeat.yml  prune-registry.yml  publish-challenges.yml  publish-nix-cache.yml  runtime-smoke.yml  sync-maintainers.yml  test-challenges.yml
babyshell/: level11_teaching1.c  level11_testing1.c
base_templates/: flask.py.j2  random_names.j2  victim-selenium.py.j2
challenges/advent-of-pwn/: .gitattributes  (+1 more)
ci/: changed_challenges.sh  check-maintainers  list-challenges  list-changed-challenges  sync-maintainers
docs/: development.md
legacy/: build.sh
runtime/: default.nix  kernel.nix  seccomp.nix
sql-playground/: .gitattributes
sql_playground/: DESCRIPTION.md
tools/pwnshop/: default.nix  pyproject.toml
tools/pwnshop/src/pwnshop/: __init__.py  __main__.py
tools/pwnshop/src/pwnshop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/pwnshop/src/pwnshop/commands/: build.py  list.py  render.py  run.py  test.py
tools/pwnshop/src/pwnshop/lib/: __init__.py
what-is-a-bug/: .gitattributes
(+8213 files in other folders)
