[project]
name = "pwnshop"
version = "0.0.0"
description = "CLI tooling for pwn.college challenges"
requires-python = ">=3.9"
authors = [{ name = "pwn.college" }]
dependencies = [
  "black",
  "click",
  "jinja2",
  "pyyaml",
  "requests",
  "rich",
]

[project.scripts]
pwnshop = "pwnshop:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
